------------
v3.0.0alpha4
------------




------------
v3.0.0alpha3
------------

|+

------------
v3.0.0alpha2
------------

|+

------------
v3.0.0alpha1
------------

[mjr] Add Request Body Stream to interface (PR #1, Ralf Lang
      <lang@b1-systems.de>).



------
v2.0.4
------

[jan] Mark PHP 7 as supported.


------
v2.0.3
------

[jan] Fix issues with certain locales like Turkish.


------
v2.0.2
------

[jan] Add Composer definition.


------
v2.0.1
------

[mms] Use new Horde_Test layout.


------
v2.0.0
------

First stable release for Horde 5.


-----------
v2.0.0beta2
-----------

[jan] Fix superglobals access (Bug #11277).


-----------
v2.0.0beta1
-----------

First beta release for Horde 5.


------------
v2.0.0alpha1
------------

First alpha release for Horde 5.


------
v1.0.2
------

[rla] Add license file.


------
v1.0.1
------

[gwr] Fixed the debug response writer.
[gwr] Added a mock request class.
[gwr] Allow passing the response body as stream.


------
v1.0.0
------

First stable release for Horde 4.


---------
v1.0.0RC2
---------

Second release candidate for Horde 4.


---------
v1.0.0RC1
---------

First release candidate for Horde 4.


-----------
v1.0.0beta1
-----------

First beta release for Horde 4.


------------
v1.0.0alpha1
------------

First alpha release for Horde 4.


------
v0.1.0
------

Initial release.