@@ -30,7 +30,7 @@ license:
   uri: http://www.horde.org/licenses/bsd
 dependencies:
   required:
-    php: ^7
+    php: ^7.4 || ^8
     composer:
       horde/exception: ^3
       horde/injector: ^3
@@ -40,7 +40,7 @@ dependencies:
   optional:
     composer:
       horde/test: ^3
-      horde/http: *
+      horde/http: '*'
     ext:
       mbstring: '*'
       zlib: '*'
